# cvar

./: .gitignore  CMakeLists.txt  README.md
CMake/: InteractiveConsole.cmake  Parse.cmake  libcvar.cmake
Demos/: Parse.cpp
Include/cvar/: Api.h  BufferedInputStream.h  CVarSystem.h  CVarTypes.h  ISerializer.h  JSONSerializer.h  JSONUnserializer.h  SID.h  SerializerExceptions.h
Sources/: CVarSystem.cpp  CVarTypes.cpp  InteractiveConsole.cpp  JSONSerializer.cpp  JSONUnserializer.cpp  SID.cpp
